Added rest of stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
     <html>
         <head>
             <title>{{ page.title }}</title>
-            <!-- link to main stylesheet -->
+
+            {% include head.html %}
             <link rel="stylesheet" type="text/css" href="/css/main.css">
         </head>
         <body>
@@ -21,8 +22,8 @@
             </div><!-- /.container -->
             <footer>
                 <ul>
-                    <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-                    <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+                    <li><a href="mailto:kcorder@udel.edu">email</a></li>
+                    <li><a href="https://github.com/kcorder">github.com/kcorder</a></li>
                 </ul>
             </footer>
         </body>
