--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
 
             {% include head.html %}
             <link rel="stylesheet" type="text/css" href="/css/main.css">
+
+            <link rel="icon" href="/parens.ico" type="image/x-icon">
+
         </head>
         <body>
             <nav>
