--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
             {% include head.html %}
             <link rel="stylesheet" type="text/css" href="/css/main.css">
+            <link rel="stylesheet" type="text/css" href="/css/syntax.css">
 
             <link rel="icon" href="/parens.ico" type="image/x-icon">
 
