--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
             <title>{{ page.title }}</title>
 
             {% include head.html %}
-            <link rel="stylesheet" type="text/css" href="/css/main.css">
-            <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css">
+            <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
+            <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css"> -->
 
             <link rel="icon" href="/parens.ico" type="image/x-icon">
 
