--- a/css/main.css
+++ b/css/main.css
@@ -104,8 +104,8 @@ ul.posts li {
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 /* post > */ 
-/* .highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; } */
-/* .highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; } */
+.highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; } 
+.highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; } 
 
 /*  -------   FROM KARPATHY'S CSS: THIS DOESN'T SEEM TO DO ANYTHING? ----------- */
 
