--- a/css/main.css
+++ b/css/main.css
@@ -104,13 +104,14 @@ ul.posts li {
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 /* post > */ 
-.highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; } 
-.highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; } 
+/* .highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; } 
+.highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }  */
 
 /*  -------   FROM KARPATHY'S CSS: THIS DOESN'T SEEM TO DO ANYTHING? ----------- */
-
 /* .post pre,
-.post code {
+.post code { */
+.highlight pre,
+.highlight code {
     border: 1px solid #d5d5e9;
     background-color: #eef;
     padding: 8px 12px;
@@ -120,14 +121,14 @@ ul.posts li {
     font-size: 15px;
     overflow:auto;
 }
-.post code { 
+.highlight code { 
     padding: 1px 5px; 
 }
 
-.post pre code {
+.highlight pre code {
     border: 0;
     padding-right: 0;
     padding-left: 0;
-} */
+} 
 
 
