--- a/css/main.css
+++ b/css/main.css
@@ -125,10 +125,10 @@ ul.posts li {
     padding: 1px 5px; 
 }
 
-.post pre code {
+/* .post pre code {
     border: 0;
     padding-right: 0;
     padding-left: 0;
-} 
+}  */
 
 
