--- a/css/main.css
+++ b/css/main.css
@@ -110,19 +110,21 @@ ul.posts li {
 /*  -------   FROM KARPATHY'S CSS: THIS DOESN'T SEEM TO DO ANYTHING? ----------- */
 /* .post pre,
 .post code { */
-.post pre,
-.post code {
+.post pre { /*,*/
+/* .post code { */
     border: 1px solid #d5d5e9;
     background-color: #eef;
 /*     padding: 8px 12px; */
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    font-size: 15px;
-    overflow:auto;
+/*     font-size: 15px; */
+/*     overflow:auto; */
 }
 .post code { 
-    padding: 1px 5px; 
+    padding: 1px 1px; 
+    font-size: 15px;
+    overflow:auto;
 }
 
 /* .post pre code {
