--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     margin: 60px auto;
     width: 70%;
 }
@@ -114,7 +115,7 @@ ul.posts li {
 /* .post code { */
     border: 1px solid #d5d5e9;
     background-color: #eef;
-/*     padding: 8px 12px; */
+    padding: 8px 12px;
     -webkit-border-radius: 1px;
     -moz-border-radius: 1px;
     border-radius: 1px;
