--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ ul.posts li {
     border: 0px;
 /*     padding-right: 0; */
 /*     padding-left: 0; */
-    padding: 0px; 
+    padding: 5px 5px; 
 }
 
 
