--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ ul.posts li {
 /* .post code { */
     border: 1px solid #d5d5e9;
     background-color: #eef;
-    padding: 8px 12px;
+/*     padding: 8px 12px; */
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 0px;
