--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ ul.posts li {
 }
 /*     padding: 5px 5px;  */
 .post code { 
-    padding: 5px 5px; 
+    margin: 5px 5px; 
     font-size: 15px;
     overflow:auto;
 }
