--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,10 @@ ul.posts li {
     list-style: none;
 }
 
-.highlight  { background: #eeeeee; }
+.highlight  { 
+    background: #ffffff; 
+    padding: 5px; 
+}
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
