--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 body {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     margin: 60px auto;
-    width: 70%;
+    width:90%;
+    max-width:1200px;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
