--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
             <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css"> -->
 
-            <link rel="icon" href="/pi_opt.ico" type="image/x-icon">
+            <link rel="icon" href="/piopt.ico" type="image/x-icon">
 
         </head>
         <body>
