--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
                 <ul>
                     <li><a href="mailto:kcorder@udel.edu">email</a></li>
                     <li><a href="https://github.com/kcorder">github.com/kcorder</a></li>
+                    <li><a href="https://twitter.com/kevinmcorder">twitter</a></li>
                 </ul>
             </footer>
         </body>
