--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,11 @@ ul.posts li {
     list-style: none;
 }
 
+.homepage img {
+    border-radius: 15%;
+    float: right;
+}
+
 .highlight  { 
     background: #ffffff; 
 }
