--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
     margin: 60px auto;
     width: 90%;
     max-width: 1000px;
+    min-height: 80%; 
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
