--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
             <footer>
                 <ul>
                     <li><a href="mailto:kcorder@udel.edu">email</a></li>
+                    <li><a href="https://scholar.google.com/citations?user=o6Jmy2YAAAAJ&hl=en&oi=ao>google scholar</a></li>
                     <li><a href="https://github.com/kcorder">github.com/kcorder</a></li>
                     <li><a href="https://twitter.com/kevinmcorder">twitter</a></li>
                 </ul>
