--- a/_layouts/pdf.html
+++ b/_layouts/pdf.html
@@ -1,11 +1,7 @@
-{% highlight html %}
-{% raw %}
+---	
+layout: default	
+---	
 <!DOCTYPE html>
-<html>
-  {% include head.html %}
-  <body>
-    {{ content }}
-  </body>
-</html>
-{% endraw %}
-{% endhighlight %}
+<div class="pdf">	<html>
+  {{ content }} 	  {% include head.html %}
+</div> 
