--- a/_layouts/pdf.html
+++ b/_layouts/pdf.html
@@ -1,7 +1,6 @@
 ---	
 layout: default	
 ---	
-<!DOCTYPE html>
-<div class="pdf">	<html>
-  {{ content }} 	  {% include head.html %}
+<div class="pdf">
+  {{ content }}
 </div> 
