--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/cv">CV</a></li>
                     <li><a href="/blog">Blog</a></li>
+                    <li><a href="/papers">My Work</a></li>
                 </ul>
             </nav>
             <div class="container">
